# sycamore-prototype

./: Cargo.toml  README.md  form1.component.css  form2.component.css  index.html  navbar.component.css  styles.css  stylesheet.css
src/: accessibility.rs  app.rs  button.rs  click_wrap.rs  constants.rs  contact.rs  form1.rs  form2.rs  help.rs  icon.rs  main.rs  nav_bar.rs  privacy.rs  router.rs  toggle_button.rs
