[package]
name = "sycamore-prototype"
version = "0.1.0"
authors = ["David Wallace Croft <david@croftsoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
# description = "project description"
edition = "2021"
homepage = "http://www.croftsoft.com/"
# keywords = ["keyword"]
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/sycamore-prototype"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
sycamore = "0.8.0-beta.7"
sycamore-router = "0.8.0-beta.7"
